[gd_scene load_steps=5 format=3 uid="uid://cj0tslt5wg010"]

[ext_resource type="Script" path="res://ui/gameboard.gd" id="1_5iutp"]
[ext_resource type="PackedScene" uid="uid://cee1i6r18g6ut" path="res://drone_core/ddcc.tscn" id="1_de6p2"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_u7sq1"]
size = Vector2(1152, 648)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_ceo3k"]

[node name="Gameboard" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5iutp")

[node name="Centerer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Midpoint" type="Control" parent="Centerer"]
layout_mode = 2

[node name="DDCC" parent="Centerer/Midpoint" instance=ExtResource("1_de6p2")]
scale = Vector2(0.4, 0.4)

[node name="GameboardArea" type="Area2D" parent="Centerer/Midpoint"]
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Centerer/Midpoint/GameboardArea"]
shape = SubResource("RectangleShape2D_u7sq1")
debug_color = Color(0, 0.6, 0.701961, 0.0627451)

[node name="MapBounds" type="StaticBody2D" parent="."]

[node name="Top" type="CollisionShape2D" parent="MapBounds"]
position = Vector2(566, 18)
rotation = -3.14159
shape = SubResource("WorldBoundaryShape2D_ceo3k")

[node name="Bottom" type="CollisionShape2D" parent="MapBounds"]
position = Vector2(576, 626)
rotation = -12.5664
shape = SubResource("WorldBoundaryShape2D_ceo3k")

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="Left" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(12, 314)
rotation = 1.57079
shape = SubResource("WorldBoundaryShape2D_ceo3k")

[node name="Right" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(1130, 300)
rotation = -1.57079
shape = SubResource("WorldBoundaryShape2D_ceo3k")

[node name="StaticBody2D2" type="StaticBody2D" parent="."]

[node name="Left" type="CollisionShape2D" parent="StaticBody2D2"]
position = Vector2(46, 329)
rotation = 1.57079
shape = SubResource("WorldBoundaryShape2D_ceo3k")

[node name="Right" type="CollisionShape2D" parent="StaticBody2D2"]
position = Vector2(576, 45)
rotation = -3.14159
shape = SubResource("WorldBoundaryShape2D_ceo3k")

[node name="Right2" type="CollisionShape2D" parent="StaticBody2D2"]
position = Vector2(1065, 317)
rotation = -7.85397
shape = SubResource("WorldBoundaryShape2D_ceo3k")

[node name="Right3" type="CollisionShape2D" parent="StaticBody2D2"]
position = Vector2(580, 601)
rotation = -6.28318
shape = SubResource("WorldBoundaryShape2D_ceo3k")

[node name="LevelObjects" type="Node2D" parent="."]

[node name="EnemySpawnClock" type="Timer" parent="."]

[connection signal="timeout" from="EnemySpawnClock" to="." method="_on_enemy_spawn_clock_timeout"]
